Bug Fixes and Additions